--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "dcl start",
     "build": "build-ecs",
     "watch": "build-ecs --watch",
-    "deploy:now": "dcl export && now export",
+    "deploy:now": "dcl export && now -n JamminLand export",
     "deploy:github": "dcl export -o ../../levalleux-ludo.github.io/DCL/JamminLand run export",
     "ecs:install": "npm install --save-dev decentraland-ecs@latest",
     "ecs:install-next": "npm install --save-dev decentraland-ecs@next"
