--- a/src/mp_server/package.json
+++ b/src/mp_server/package.json
@@ -14,9 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/uuid": "^3.4.5",
+    "@types/winston": "^2.4.4",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.1",
