--- a/src/mp_server/package.json
+++ b/src/mp_server/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/uuid": "^3.4.5",
     "@types/winston": "^2.4.4",
+    "async-mutex": "^0.1.4",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "uuid": "^3.3.3",
