--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "dcl-project",
-  "version": "1.0.0",
-  "description": "My new Decentraland project",
-  "scripts": {
-    "start": "dcl start",
-    "build": "build-ecs",
-    "build:mp_server": "cd src/mp_server && npm run build & cd ../..",
-    "watch": "build-ecs --watch",
-    "deploy:now": "dcl export && now -n JamminLand export",
-    "deploy:now:preprod": "dcl export && now -n JamminLand-test export",
-    "deploy:now:mp": "dcl export && now -n JamminLand-mp export",
-    "deploy:now:mp_server": "cd src/mp_server && npm run deploy:now & cd ../..",
-    "deploy:github": "dcl export -o ../../levalleux-ludo.github.io/DCL/JamminLand run export",
-    "ecs:install": "npm install --save-dev decentraland-ecs@latest",
-    "ecs:install-next": "npm install --save-dev decentraland-ecs@next"
-  },
-  "devDependencies": {
-    "decentraland-ecs": "latest"
-  },
-  "dependencies": {
-    "decentraland-ecs-utils": "^1.1.3"
-  }
+    "name": "dcl-project",
+    "version": "1.0.0",
+    "description": "My new Decentraland project",
+    "scripts": {
+        "start": "dcl start",
+        "build": "build-ecs",
+        "build:mp_server": "cd src/mp_server && npm run build & cd ../..",
+        "watch": "build-ecs --watch",
+        "deploy:now": "dcl export && now -n JamminLand export",
+        "deploy:now:preprod": "dcl export && now -n JamminLand-test export",
+        "deploy:now:mp": "dcl export && now -n JamminLand-mp export",
+        "deploy:now:mp_server": "cd src/mp_server && npm run deploy:now & cd ../..",
+        "deploy:github": "dcl export -o ../../levalleux-ludo.github.io/DCL/JamminLand run export",
+        "ecs:install": "npm install --save-dev decentraland-ecs@latest",
+        "ecs:install-next": "npm install --save-dev decentraland-ecs@next"
+    },
+    "devDependencies": {
+        "decentraland-ecs": "^6.4.2"
+    },
+    "dependencies": {
+        "decentraland-ecs-utils": "^1.1.3"
+    }
 }
